# pyserv

./: .bandit.yml  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  COMPREHENSIVE_FRAMEWORK_ANALYSIS.md  CONTRIBUTING.md  Dockerfile  ENHANCED_FRAMEWORK_README.md  FRAMEWORK_AUDIT_REPORT.md  LICENSE  MANIFEST.in  QUANTUM_SECURITY_README.md  README.md  REFACTORING_SUMMARY.md  STATIC_FILES_README.md  api_docs_redoc.html  api_docs_swagger.html  build.py  config.py.example  docker-compose.yml  gunicorn.conf.py  nginx.conf.example  openapi_spec.json  pyproject.toml  pytest.ini  requirements.txt  setup.py  setup_templates.py  simple_test.py  tox.ini
.github/workflows/: ci.yml
contrib/: __init__.py
contrib/auth/: __init__.py  auth.py  backends.py  decorators.py  forms.py
contrib/cache/: __init__.py  backends.py  cache.py
contrib/email/: __init__.py  backends.py  mail.py  templates.py
contrib/logging/: __init__.py  formatters.py  handlers.py  logger.py  middleware.py
examples/: __init__.py  api_documentation_demo.py  app.py  caching_demo.py  comprehensive_demo.py  custom_user.py  docs_standalone_demo.py  email_template_demo.py  enhanced_distributed_app.py  high_performance_demo.py  manage.py  neuralforge_demo.py  performance_demo.py  quantum_security_demo.py  quantum_security_standalone.py  resilience_demo.py  router_demo.py  security_demo.py  security_demo_advanced.py  security_standalone.py  static_demo.py  streaming_demo.py  template_engine_demo.py  template_engine_simple_test.py  template_test.py  test_quantum_only.py  utilities_demo.py  widgets_demo.py
examples/widgets/: demo.py
pyserv-client/: CLIENT_AUDIT_REPORT.md  README.md  test-integration.js  tsconfig.json  vite.config.ts
pyserv-client/examples/: modern-signal-app.html
pyserv-client/src/: index.js
pyserv-client/src/components/: App.js  Button.js
pyserv-client/src/core/: Auth.js  Benchmark.js  Component.js  DeveloperTools.js  Diff.js  JSX.js  JSXTransformer.js  ModernRenderer.js  PyservClient.js  Reactive.js  Router.js  Signal.js  Store.js  index.js
pyserv-client/src/services/: ApiClient.js  CacheManager.js  NotificationManager.js  ThemeManager.js  WebSocketClient.js
pyserv-client/src/types/: index.d.ts
scripts/: audit_dependencies.py  client_audit.py  framework_audit.py  test_framework.py
src/pydance/: __init__.py  cli.py  testing.py
src/pydance/controllers/: __init__.py  api.py  base.py
src/pydance/core/: __init__.py  api.py  application.py  auth.py  caching.py  cli.py  database_pool.py  dependency_injection.py  di.py  distributed_cache.py  exceptions.py  file_handler.py  form_validation.py  i18n.py  load_balancer.py  middleware.py  middleware_manager.py  pagination.py  performance_anti_patterns.py  performance_optimizer.py  profiling.py  queues.py  rate_limiting.py  request.py  routing.py  security.py  security_middleware.py  server.py  static.py  storage.py  testing.py  types.py  utilities.py  websocket.py
src/pydance/database/: __init__.py  database.py
src/pydance/docs/: __init__.py
src/pydance/graphql/: __init__.py  schema.py
src/pydance/i18n/: __init__.py  formatters.py  middleware.py  translations.py  utils.py
src/pydance/microservices/: __init__.py  consensus.py  event_sourcing.py  grpc_service.py  rest_api_patterns.py  service.py  service_discovery.py
src/pydance/migrations/: __init__.py  framework.py  migration.py  migrator.py
src/pydance/models/: __init__.py  base.py  factory.py  query.py  user.py
src/pydance/monitoring/: __init__.py  metrics.py  observability.py
src/pydance/neuralforge/: __init__.py  agent_system.py  communication.py  economy.py  framework.py  llm_engine.py  mcp_integration.py
src/pydance/security/: __init__.py  backup_recovery.py  certificate_management.py  compliance.py  cryptography.py  defense_in_depth.py  iam.py  key_management.py  middleware.py  performance_optimization.py  quantum_security.py  siem_integration.py  web3.py  webassembly.py  zero_trust.py
src/pydance/streaming/: __init__.py  performance_comparison.md  stream_bindings.py  stream_core.cpp  test_integration.py
src/pydance/translations/: es.json
src/pydance/utils/: __init__.py  advanced_functions.py  advanced_math.py  collections.py  locale_support.py  types.py
src/pydance/views/: __init__.py  base.py
src/pydance/widgets/: __init__.py  core.py  forms.py  widgets.py  widgets_basic.py  widgets_extra.py
src/pyserv/: __init__.py  api.py  cli.py  events.py  exceptions.py  plugins.py  storage.py
src/pyserv/auth/: __init__.py  auth.py  security.py  security_middleware.py
src/pyserv/caching/: __init__.py  cache_decorator.py  cache_manager.py  cache_metrics.py  cdn_cache.py  distributed_cache.py  memory_cache.py  redis_cache.py
src/pyserv/cli/: shell.py
src/pyserv/config/: __init__.py
src/pyserv/controllers/: __init__.py  api.py  base.py
src/pyserv/database/: __init__.py  config_consolidated.py  connection.py  database_pool.py
src/pyserv/deployment/: __init__.py  ci_cd_pipeline.py  deployment_manager.py  deployment_monitor.py  docker_manager.py  kubernetes_manager.py  rollback_manager.py
src/pyserv/docs/: __init__.py
src/pyserv/graphql/: __init__.py  schema.py
src/pyserv/http/: __init__.py  request.py  response.py
src/pyserv/i18n/: __init__.py  formatters.py  utils.py  (+3 more)
tests/: conftest.py  testing.py
tests/fixtures/: __init__.py  database.py  http.py
tests/integration/: test_application_lifecycle.py  test_full_application.py  test_http_endpoints.py  test_middleware_integration.py  test_model_database_integration.py  test_websocket_integration.py
tests/load/: locustfile.py
tests/performance/: test_performance.py
tests/regression/: test_regression.py
tests/security/: test_quantum_security.py  test_security.py
tests/standalone/: test_metamodel.py
tests/system/: test_error_handling_and_load.py  test_server_management.py  test_system.py
tests/unit/: minimal_test.py  simple_test.py  standalone_test.py  test_application.py  test_i18n.py  test_lean_templates.py  test_migrations.py  test_models.py  test_routing.py  test_widgets.py
(+164 files in other folders)
